# weather-forecast-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  nginx.conf  pyproject.toml  pytest.ini
app/: config.py  main.py
app/api/: api.py
app/api/v1/endpoints/: weather.py
app/crud/: search_history_service.py  services.py
app/frontend/templates/: index.html
app/models/: database.py  models.py
app/schemas/: schemas.py
app/utils/: logger.json  logger.py
tests/: conftest.py  test_api.py
